--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>銀河電腦城 | 關於我們</title>
     <link rel="stylesheet" href="style.css" />
     <link
