--- a/builder.html
+++ b/builder.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <title>銀河電腦城 | 自選砌機報價</title>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>銀河電腦城 | 自選砌機報價</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
@@ -86,85 +88,70 @@
         }
       }
     </style>
-  </head>
-  <body>
-    <!-- 導航列 -->
+  
 
-    <header class="sticky-top">
-      <!-- collapse container -->
-      <div class="container container-fluid" id="collapseCon">
-        <h1 class="nav_h1" style="font-size: 30px">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <div>
-          <a href="cartPage.html" class="cart-icon"
-            ><img src="./img/shoppingCart.png" height="40" /><span
-              class="cart-count-col"
-              >0</span
-            ></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="fa fa-bars"></span>
-          </button>
-        </div>
-      </div>
+</head>
 
-      <!-- normal container -->
-      <div class="container" id="normalCon">
-        <h1 class="nav_h1">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">主頁</a></li>
-            <li><a href="productList.html">產品目錄</a></li>
-            <li><a href="builder.html">自選砌機報價</a></li>
-            <li><a href="about.html">關於我們</a></li>
-            <li>
-              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-            </li>
-            <li>
-              <a href="cartPage.html" class="cart-icon"
-                ><img src="./img/shoppingCart.png" height="50" /><span
-                  class="cart-count"
-                  >0</span
-                ></a
-              >
-            </li>
-          </ul>
-        </nav>
+<body>
+  <!-- 導航列 -->
+
+  <header class="sticky-top">
+    <!-- collapse container -->
+    <div class="container container-fluid" id="collapseCon">
+      <h1 class="nav_h1" style="font-size: 30px">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <div>
+        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
+            class="cart-count-col">0</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span>
+        </button>
       </div>
-      <!-- 導航列extent -->
-      <div class="collapse colbar" id="navbarToggleExternalContent">
+    </div>
+
+    <!-- normal container -->
+    <div class="container" id="normalCon">
+      <h1 class="nav_h1">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <nav>
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> |
-            <a href="register.html">註冊</a>
+            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+          </li>
+          <li>
+            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
+                class="cart-count">0</span></a>
           </li>
         </ul>
-      </div>
-      <!-- 導航列end extent -->
-    </header>
-    <!-- 導航列end -->
-    <main>
+      </nav>
+    </div>
+    <!-- 導航列extent -->
+    <div class="collapse colbar" id="navbarToggleExternalContent">
+      <ul>
+        <li><a href="index.html">主頁</a></li>
+        <li><a href="productList.html">產品目錄</a></li>
+        <li><a href="builder.html">自選砌機報價</a></li>
+        <li><a href="about.html">關於我們</a></li>
+        <li>
+          <a href="login.html">登入</a> |
+          <a href="register.html">註冊</a>
+        </li>
+      </ul>
+    </div>
+    <!-- 導航列end extent -->
+  </header>
+  <!-- 導航列end -->
+   <main>
       <section class="builder-section">
         <h2>自選砌機報價系統</h2>
         <form id="pc-builder">
@@ -221,9 +208,9 @@
         </form>
       </section>
     </main>
-    
-    <!-- 頁尾 -->
-      <div class="container py-4">
+
+  <!-- 頁尾  -->
+   <div class="container py-4">
       <div class="row">
         <div class="col-sm-4">
           <div class="follow-us">
@@ -258,15 +245,14 @@
         </div>
       </div>
     </div>
-    <footer>
-      <div class="container">© 2025 銀河電腦城．版權所有</div>
-    </footer>
+  <footer>
+    <div class="container">© 2025 銀河電腦城．版權所有</div>
+  </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-    <script src="builderScript.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+   <script src="builderScript.js"></script>
+</body>
+
 </html>
