--- a/productList.html
+++ b/productList.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <title>銀河電腦城 | 產品目錄</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+ <title>銀河電腦城 | 產品目錄</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
@@ -13,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+
 </head>
 
 <body>
@@ -53,8 +56,7 @@
           </li>
           <li>
             <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-              class="cart-count">0</span>
-            </a>
+                class="cart-count">0</span></a>
           </li>
         </ul>
       </nav>
@@ -75,8 +77,6 @@
     <!-- 導航列end extent -->
   </header>
   <!-- 導航列end -->
-
-
   <main>
     <div class="main-flex">
       <!-- 側邊欄 -->
@@ -103,8 +103,9 @@
         </div>
       </div>
   </main>
-  <!-- 頁尾 -->
-    <div class="container py-4">
+
+  <!-- 頁尾  -->
+   <div class="container py-4">
       <div class="row">
         <div class="col-sm-4">
           <div class="follow-us">
@@ -147,5 +148,6 @@
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
   <script src="productListScript.js"></script>
-  </head>
+</body>
+
 </html>
