--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title overflow-auto" style="height: 100px">
-                GAMING GeForce RTX 5070 顯示卡
+                產品名字
               </h5>
               <span
                 style="
@@ -243,7 +243,7 @@
               </span>
 
               <p class="card-text">最新人氣產品</p>
-              <a href="#" class="btn btn-primary">立即選購</a>
+              <button class="btn btn-primary">立即選購</button>
             </div>
           </div>
 
@@ -253,7 +253,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title overflow-auto" style="height: 100px">
-                GAMING GeForce RTX 5070 顯示卡
+                產品名字
               </h5>
               <span
                 style="
@@ -275,7 +275,7 @@
                 />
               </span>
               <p class="card-text">推薦產品</p>
-              <a href="#" class="btn btn-primary">立即選購</a>
+              <button class="btn btn-primary">立即選購</button>
             </div>
           </div>
 
@@ -285,14 +285,14 @@
             </div>
             <div class="card-body">
               <h5 class="card-title overflow-auto" style="height: 100px">
-                GAMING GeForce RTX 5070 顯示卡
+                產品名字
               </h5>
               <span style="font-size: 14px; color: white; background: orange">
                 ***有折扣
               </span>
 
               <p class="card-text">金牌產品</p>
-              <a href="#" class="btn btn-primary">立即選購</a>
+              <button class="btn btn-primary">立即選購</button>
             </div>
           </div>
         </div>
