--- a/productDetail.html
+++ b/productDetail.html
@@ -10,10 +10,7 @@
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 </head>
 
 <body>
@@ -54,7 +51,7 @@
           </li>
           <li>
             <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-              class="cart-count">0</span>
+                class="cart-count">0</span>
             </a>
           </li>
         </ul>
@@ -76,67 +73,61 @@
     <!-- 導航列end extent -->
   </header>
   <!-- 導航列end -->
-   <main>
+  <main>
     <div class="row">
-        <img id="productImg" class="col-6" src="" alt="">
-        <div class="col">
-            <h1 id="productName">
-            </h1>
-            <div id="productDescription">
-            </div>
+      <img id="productImg" class="col-4" src="" alt="">
+      <div class="col-6">
+        <h1 id="productName">
+        </h1>
+        <div id="productDescription">
         </div>
-    </div>
-   </main>
-  <!-- 頁尾 -->
-   
-  <footer>
-    <div class="container">© 2025 銀河電腦城．版權所有</div>
-  </footer> <div class="container py-4">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="follow-us">
-            <img src="./img/gx.jpeg" style="width: 100%" />
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <img src="./img/payment.webp" style="width: 100%" />
-        </div>
-
-        <div class="col-sm-4">
-          <p style="margin-bottom: 0px;">關注我們</p>
-          <a
-            href="https://www.facebook.com"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="fab fa-facebook-f"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="bi bi-instagram"></i
-          ></a>
-          <p style="margin-bottom: 0px;">私隱政策 | 使用條款</p>
-          <p style="margin-bottom: 0px;">應用程式</p>
-          <img src="./img/googleplay.svg" style="width: 45%;" />
-          <img src="./img/applestore.svg" style="width: 45%;"/>
-        </div>
+        <h1 id="productPrice">HK$0</h1>
+        <button onclick="minusDemandtQuantity()">-</button>
+        <span id="demandElement">1</span>
+        <button onclick="plusProductQuantity()">+</button>
+        <button class="btn btn-success" onclick="addToCart()">加入購物車</button>
       </div>
     </div>
+    <div class="confirmTips">
+          <div class="confirmTips-content">
+            <div>產品已加入購物車！</div>
+            <button id="closeConfirmBtn">關閉</button>
+          </div>
+        </div>
+  </main>
+  <!-- 頁尾 -->
+
+  <footer>
+    <div class="container">© 2025 銀河電腦城．版權所有</div>
+  </footer>
+  <div class="container py-4">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="follow-us">
+          <img src="./img/gx.jpeg" style="width: 100%" />
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <img src="./img/payment.webp" style="width: 100%" />
+      </div>
+
+      <div class="col-sm-4">
+        <p style="margin-bottom: 0px;">關注我們</p>
+        <a href="https://www.facebook.com" class="icon-button" target="_blank">
+          <i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/" class="icon-button" target="_blank">
+          <i class="bi bi-instagram"></i></a>
+        <p style="margin-bottom: 0px;">私隱政策 | 使用條款</p>
+        <p style="margin-bottom: 0px;">應用程式</p>
+        <img src="./img/googleplay.svg" style="width: 45%;" />
+        <img src="./img/applestore.svg" style="width: 45%;" />
+      </div>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous">
-  </script>
-  <script>
-    let currentProduct = JSON.parse(localStorage.getItem("currentProduct"));
-    let productImg = document.getElementById("productImg");
-    let productName = document.getElementById("productName");
-    let productDescription = document.getElementById("productDescription");
-    productImg.src = currentProduct.imgUrl;
-    productName.textContent = currentProduct.name;
-    productDescription.textContent = currentProduct.description;
-  </script>
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+    </script>
+  <script src="productDetailScript.js"></script>
+
 </html>
