--- a/about.html
+++ b/about.html
@@ -1,226 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>銀河電腦城 | 關於我們</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
-   
-  </head>
 
-  <body>
-    <!-- 導航列 -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>銀河電腦城 | 關於我們</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
-    <header class="sticky-top">
-      <!-- collapse container -->
-      <div class="container container-fluid" id="collapseCon">
-        <h1 class="nav_h1" style="font-size: 30px">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <div>
-          <a href="cartPage.html" class="cart-icon"
-            ><img src="./img/shoppingCart.png" height="40" /><span
-              class="cart-count-col"
-              >0</span
-            ></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="fa fa-bars"></span>
-          </button>
-        </div>
+</head>
+
+<body>
+  <!-- 導航列 -->
+
+  <header class="sticky-top">
+    <!-- collapse container -->
+    <div class="container container-fluid" id="collapseCon">
+      <h1 class="nav_h1" style="font-size: 30px">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <div>
+        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
+            class="cart-count-col">0</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span>
+        </button>
       </div>
+    </div>
 
-      <!-- normal container -->
-      <div class="container" id="normalCon">
-        <h1 class="nav_h1">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">主頁</a></li>
-            <li><a href="productList.html">產品目錄</a></li>
-            <li><a href="builder.html">自選砌機報價</a></li>
-            <li><a href="about.html">關於我們</a></li>
-            <li>
-              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-            </li>
-            <li>
-              <a href="cartPage.html" class="cart-icon"
-                ><img src="./img/shoppingCart.png" height="50" /><span
-                  class="cart-count"
-                  >0</span
-                ></a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <!-- 導航列extent -->
-      <div class="collapse colbar" id="navbarToggleExternalContent">
+    <!-- normal container -->
+    <div class="container" id="normalCon">
+      <h1 class="nav_h1">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <nav>
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> |
-            <a href="register.html">註冊</a>
+            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+          </li>
+          <li>
+            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
+                class="cart-count">0</span></a>
           </li>
         </ul>
-      </div>
-      <!-- 導航列end extent -->
-    </header>
-    <!-- 導航列end -->
+      </nav>
+    </div>
+    <!-- 導航列extent -->
+    <div class="collapse colbar" id="navbarToggleExternalContent">
+      <ul>
+        <li><a href="index.html">主頁</a></li>
+        <li><a href="productList.html">產品目錄</a></li>
+        <li><a href="builder.html">自選砌機報價</a></li>
+        <li><a href="about.html">關於我們</a></li>
+        <li>
+          <a href="login.html">登入</a> |
+          <a href="register.html">註冊</a>
+        </li>
+      </ul>
+    </div>
+    <!-- 導航列end extent -->
+  </header>
+  <!-- 導航列end -->
 
-    <main class="about_content">
-      <div>
-        <h2><br />關於我們</h2>
-        <div
-          class="about-section"
-          style="text-align: left; margin: 0 15vw 0 15vw"
-        >
-          <p>
-            <br />
-            銀河電腦城 — 你專屬嘅電腦世界探索站！
-            喺呢度，科技同夢想完美結合，為你打造最齊全、最專業嘅電腦配件選購體驗。
-          </p>
-          <p>無論你係砌機新手，定係電競高手，銀河電腦城都係你嘅最佳拍檔。</p>
-          <p>
-            喺我哋嘅平台，你可以輕鬆揀選由Intel、AMD、NVIDIA等頂尖品牌打造嘅中央處理器、顯示卡、記憶體、儲存裝置等等，滿足你對性能同品質嘅苛刻要求。
-          </p>
-          <p>
-            我哋獨有嘅自選砌機報價系統，更係突破傳統購物模式嘅創新利器。用戶只需簡單幾個步驟，就可以自由組合心水零件，即時計算出精準總價，助你輕鬆打造理想電腦，唔使再為預算煩惱。
-          </p>
-          <p>
-            銀河電腦城唔單止係銷售平台，我哋仲致力提供貼心嘅售後服務同技術支援，確保每位顧客都享有最安心、最專業嘅購物旅程。
-          </p>
-          <p>
-            選擇銀河電腦城，係選擇信心同創新的保障。無論你追求高效運算，還是享受電競激情，銀河電腦城都會陪伴你開啟無限可能嘅科技冒險！
-          </p>
+  <main class="about_content">
+    <div>
+      <h2><br />關於我們</h2>
+      <div class="about-section" style="text-align: left; margin: 0 15vw 0 15vw">
+        <p>
           <br />
-        </div>
+          銀河電腦城 — 你專屬嘅電腦世界探索站！
+          喺呢度，科技同夢想完美結合，為你打造最齊全、最專業嘅電腦配件選購體驗。
+        </p>
+        <p>無論你係砌機新手，定係電競高手，銀河電腦城都係你嘅最佳拍檔。</p>
+        <p>
+          喺我哋嘅平台，你可以輕鬆揀選由Intel、AMD、NVIDIA等頂尖品牌打造嘅中央處理器、顯示卡、記憶體、儲存裝置等等，滿足你對性能同品質嘅苛刻要求。
+        </p>
+        <p>
+          我哋獨有嘅自選砌機報價系統，更係突破傳統購物模式嘅創新利器。用戶只需簡單幾個步驟，就可以自由組合心水零件，即時計算出精準總價，助你輕鬆打造理想電腦，唔使再為預算煩惱。
+        </p>
+        <p>
+          銀河電腦城唔單止係銷售平台，我哋仲致力提供貼心嘅售後服務同技術支援，確保每位顧客都享有最安心、最專業嘅購物旅程。
+        </p>
+        <p>
+          選擇銀河電腦城，係選擇信心同創新的保障。無論你追求高效運算，還是享受電競激情，銀河電腦城都會陪伴你開啟無限可能嘅科技冒險！
+        </p>
+        <br />
       </div>
-      <section class="about-contact">
-        <h2>聯絡我們</h2>
-        <p>
-          <strong>電郵 / 商業合作：</strong> galaxy@sky.hk<br />
-          <strong>電話：</strong> +852 6666 9999<br />
-          <span class="bi bi-whatsapp" style="color: #25d366"></span>
-          <strong>WhatsApp：</strong> +852 6666 9999<br />
-          <strong>售後服務：</strong> +852 6666 9999<br />
-        </p>
+    </div>
+    <section class="about-contact">
+      <h2>聯絡我們</h2>
+      <p>
+        <strong>電郵 / 商業合作：</strong> galaxy@sky.hk<br />
+        <strong>電話：</strong> +852 6666 9999<br />
+        <span class="bi bi-whatsapp" style="color: #25d366"></span>
+        <strong>WhatsApp：</strong> +852 6666 9999<br />
+        <strong>售後服務：</strong> +852 6666 9999<br />
+      </p>
 
-        <h3>地址</h3>
-        <p>九龍彩雲二村清水灣道55號</p>
+      <h3>地址</h3>
+      <p>九龍彩雲二村清水灣道55號</p>
 
-        <h3>開放時間</h3>
-        <p>
-          星期一至日 10:00 AM – 19:00 PM<br />
-          <span style="color: red; font-weight: bold">
-            電腦維修請預早 20 分鐘到達以便作簡短測試。<br />
-            * For customers that require technical support, please arrive 20
-            minutes in advance.
-          </span>
-        </p>
+      <h3>開放時間</h3>
+      <p>
+        星期一至日 10:00 AM – 19:00 PM<br />
+        <span style="color: red; font-weight: bold">
+          電腦維修請預早 20 分鐘到達以便作簡短測試。<br />
+          * For customers that require technical support, please arrive 20
+          minutes in advance.
+        </span>
+      </p>
 
-        <h3>交通工具</h3>
-        <p>彩虹地鐵站：A2 出口直行，16號小巴，第二個站落車<br /></p>
+      <h3>交通工具</h3>
+      <p>彩虹地鐵站：A2 出口直行，16號小巴，第二個站落車<br /></p>
 
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.5004662669635!2d114.21241741734454!3d22.334724269457787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406ce855a9e2f%3A0x72f7a3048d66aa39!2z5Z-6552j5pWO5Yu16KGM5pyD5YOx5ZOh5YaN5Z-56KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1749796464489!5m2!1szh-TW!2stw"
-          width="400"
-          height="250"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </section>
-    </main>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.5004662669635!2d114.21241741734454!3d22.334724269457787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406ce855a9e2f%3A0x72f7a3048d66aa39!2z5Z-6552j5pWO5Yu16KGM5pyD5YOx5ZOh5YaN5Z-56KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1749796464489!5m2!1szh-TW!2stw"
+        width="400" height="250" style="border: 0" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+  </main>
 
-  
-    <!-- 頁尾 -->
-        <div style="background-color: rgb(240, 235, 235)">
-      <div class="container py-4">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="follow-us">
-              <img src="./img/gx.jpeg" style="width: 100%" />
-            </div>
+
+  <!-- 頁尾 -->
+  <div style="background-color: rgb(240, 235, 235)">
+    <div class="container py-4">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="follow-us">
+            <img src="./img/gx.jpeg" style="width: 100%" />
           </div>
+        </div>
 
-          <div class="col-sm-4">
-            <img src="./img/payment.webp" style="width: 100%" />
-          </div>
+        <div class="col-sm-4">
+          <img src="./img/payment.webp" style="width: 100%" />
+        </div>
 
-          <div class="col-sm-4">
-            <p style="margin-bottom: 0px">關注我們</p>
-            <a
-              href="https://www.facebook.com"
-              class="icon-button"
-              target="_blank"
-            >
-              <i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-              href="https://www.instagram.com/"
-              class="icon-button"
-              target="_blank"
-            >
-              <i class="bi bi-instagram"></i
-            ></a>
-            <p style="margin-bottom: 0px">私隱政策 | 使用條款</p>
-            <p style="margin-bottom: 0px">應用程式</p>
-            <img src="./img/googleplay.svg" style="width: 45%" />
-            <img src="./img/applestore.svg" style="width: 45%" />
-          </div>
+        <div class="col-sm-4">
+          <p style="margin-bottom: 0px">關注我們</p>
+          <a href="https://www.facebook.com" class="icon-button" target="_blank">
+            <i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" class="icon-button" target="_blank">
+            <i class="bi bi-instagram"></i></a>
+          <p style="margin-bottom: 0px">私隱政策 | 使用條款</p>
+          <p style="margin-bottom: 0px">應用程式</p>
+          <img src="./img/googleplay.svg" style="width: 45%" />
+          <img src="./img/applestore.svg" style="width: 45%" />
         </div>
       </div>
     </div>
-    <footer>
-      <div class="container">© 2025 銀河電腦城．版權所有</div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      //如localStorage存有購物車數量
-      if (localStorage.getItem("cartQuantity")) {
-        document.querySelector(".cart-count").textContent =
-          localStorage.getItem("cartQuantity"); //更新購物車數量顯示
-        document.querySelector(".cart-count-col").textContent =
-          localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
-      }
-    </script>
-  </body>
+  </div>
+  <footer>
+    <div class="container">© 2025 銀河電腦城．版權所有</div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+  <script>
+    //如localStorage存有購物車數量
+    if (localStorage.getItem("cartQuantity")) {
+      document.querySelector(".cart-count").textContent =
+        localStorage.getItem("cartQuantity"); //更新購物車數量顯示
+      document.querySelector(".cart-count-col").textContent =
+        localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
+    }
+  </script>
+</body>
+
 </html>
